# awesomeProject/internal/pkg/app.go
@@ -53,7 +53,7 @@ func (app *Application) Run() {
 			f.DELETE("", app.WithAuthCheck(role.Client, role.Moderator), app.DeleteForecastApplication)                                                         // Удаление
 			f.PUT("/user_confirm", app.WithAuthCheck(role.Client, role.Moderator), app.UserConfirm)                                                             // Сформировать создателем
 			f.PUT("/:application_id/moderator_confirm", app.WithAuthCheck(role.Moderator), app.ModeratorConfirm)                                                // Завершить или отклонить модератором
-			f.PUT("/:application_id/set_output/:data_type_id", app.WithAuthCheck(role.NotAuthorized, role.Client, role.Moderator), app.SetOutput)               // Изменение выходных данных
+			f.PUT("/:application_id/set_output/:data_type_id", app.SetOutput)                                                                                   // Изменение выходных данных
 			f.DELETE("/delete_data_type/:data_type_id", app.WithAuthCheck(role.NotAuthorized, role.Client, role.Moderator), app.DeleteFromForecastApplications) // Изменение (удаление услуг)
 			f.PUT("/set_input/:data_type_id", app.WithAuthCheck(role.Client, role.Moderator), app.SetInput)                                                     // Изменение входных данных
 			f.PUT("/:application_id/calculate", app.Calculate)
@@ -63,7 +63,7 @@ func (app *Application) Run() {
 		{
 			u.POST("/sign_up", app.Register)
 			u.POST("/login", app.Login)
-			u.POST("/logout", app.Logout)
+			u.GET("/logout", app.Logout)
 		}
 	}
 	// !АХТУНГ! Никакого https!!!
